@@ -31,8 +31,7 @@ dependencies {
 }
 
 tasks.withType(JavaCompile) {
-    options.compilerArgs += '--enable-preview'
-    options.release = 17
+    options.release = 21
 }
 
 shadowJar {
